--- a/app/public/home.html
+++ b/app/public/home.html
@@ -14,21 +14,20 @@
   <div class="container">
 
     <div class="jumbotron">
-      <h1 class="text-center"><span class="fa fa-fire"></span> Hot Restaurant</h1>
+      <h1 class="text-left"><span class="fa fa-fire"></span> Friend Finder</h1>
       <hr>
-      <h2 class="text-center">We only have 5 tables! Book your seat before they all are gone!</h2>
+      <h2 class="text-left">Answer a few questions to find who you are most compatable with</h2>
       <br>
 
-      <div class="text-center">
-        <a href="/tables"><button class="btn btn-lg btn-primary"><span class="fa fa-list-alt"></span> View Tables</button></a>
-        <a href="/reserve"><button class="btn btn-lg btn-danger"><span class="fa fa-credit-card"></span> Make Reservation</button></a>
+      <div class="text-left">
+        <a href="/tables"><button class="btn btn-lg btn-primary"><span class="fa fa-list-alt"></span> Friends List</button></a>
       </div>
 
     </div>
 
     <footer class="footer">
       <div class="container">
-        <p><a href="/api/tables">API Table Link</a> | <a href="/api/waitlist">API Wait List</a>
+        <p><a href="/api/friends">API Friends List</a> | <a href="/api/waitlist">GitHub Repo</a>
       </div>
     </footer>
 
