survey route works

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -20,7 +20,7 @@
       <br>
 
       <div class="text-left">
-        <a href="/tables"><button class="btn btn-lg btn-primary"><span class="fa fa-list-alt"></span> Friends List</button></a>
+        <a href="/survey"><button class="btn btn-lg btn-primary"><span class="fa fa-list-alt"></span> Friends List</button></a>
       </div>
 
     </div>
