sample drop down works not others/questions update

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -1,3 +1,16 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Survey</title>
+
+  <!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
+</head>
+<body>
+
 <div class="container">
 
     <h2>Survey Questions</h2>
@@ -12,8 +25,15 @@
 
     <hr>
 
+    <select>
+      <option value="volvo">Volvo</option>
+      <option value="saab">Saab</option>
+      <option value="opel">Opel</option>
+      <option value="audi">Audi</option>
+    </select>
+
     <h3><strong>Question 1</strong></h3>
-    <h4>Your mind is always buzzing with unexplored ideas and plans.</h4>
+    <h4>You exercise everyday.</h4>
     <select class="chosen-select" id="q1" style="display: none;">
       <option value=""></option>
       <option value="1">1 (Strongly Disagree)</option>
@@ -24,7 +44,7 @@
     </select><div class="chosen-container chosen-container-single" style="width: 157px;" title="" id="q1_chosen"><a class="chosen-single chosen-default"><span>Select an Option</span><div><b></b></div></a><div class="chosen-drop"><div class="chosen-search"><input type="text" autocomplete="off"></div><ul class="chosen-results"></ul></div></div>
 
     <h3><strong>Question 2</strong></h3>
-    <h4>Generally speaking, you rely more on your experience than your imagination.</h4>
+    <h4>You watch what you eat daily or at least try to.</h4>
     <select class="chosen-select" id="q2" style="display: none;">
       <option value=""></option>
       <option value="1">1 (Strongly Disagree)</option>
@@ -36,7 +56,7 @@
 
 
     <h3><strong>Question 3</strong></h3>
-    <h4>You find it easy to stay relaxed and focused even when there is some pressure.</h4>
+    <h4>Your idle Friday night is staying in cuddled up with a good movie.</h4>
     <select class="chosen-select" id="q3" style="display: none;">
       <option value=""></option>
       <option value="1">1 (Strongly Disagree)</option>
@@ -48,7 +68,7 @@
 
 
     <h3><strong>Question 4</strong></h3>
-    <h4>You rarely do something just out of sheer curiosity.</h4>
+    <h4>You enjoy keeping up to date with recent sports news.</h4>
     <select class="chosen-select" id="q4" style="display: none;">
       <option value=""></option>
       <option value="1">1 (Strongly Disagree)</option>
@@ -60,7 +80,7 @@
 
 
     <h3><strong>Question 5</strong></h3>
-    <h4>People can rarely upset you.</h4>
+    <h4>People consider you a fun person to be around.</h4>
     <select class="chosen-select" id="q5" style="display: none;">
       <option value=""></option>
       <option value="1">1 (Strongly Disagree)</option>
@@ -72,7 +92,7 @@
 
 
     <h3><strong>Question 6</strong></h3>
-    <h4>It is often difficult for you to relate to other people’s feelings.</h4>
+    <h4>It is easy for someone to ruin your entire day.</h4>
     <select class="chosen-select" id="q6" style="display: none;">
       <option value=""></option>
       <option value="1">1 (Strongly Disagree)</option>
@@ -84,7 +104,7 @@
 
 
     <h3><strong>Question 7</strong></h3>
-    <h4>In a discussion, truth should be more important than people’s sensitivities.</h4>
+    <h4>You tend to tell people what they want to hear even if it is true or not.</h4>
     <select class="chosen-select" id="q7" style="display: none;">
       <option value=""></option>
       <option value="1">1 (Strongly Disagree)</option>
@@ -95,7 +115,7 @@
     </select><div class="chosen-container chosen-container-single" style="width: 157px;" title="" id="q7_chosen"><a class="chosen-single chosen-default"><span>Select an Option</span><div><b></b></div></a><div class="chosen-drop"><div class="chosen-search"><input type="text" autocomplete="off"></div><ul class="chosen-results"></ul></div></div>
 
     <h3><strong>Question 8</strong></h3>
-    <h4>You rarely get carried away by fantasies and ideas.</h4>
+    <h4>You spend most of your day staring at your phone.</h4>
     <select class="chosen-select" id="q8" style="display: none;">
       <option value=""></option>
       <option value="1">1 (Strongly Disagree)</option>
@@ -106,7 +126,7 @@
     </select><div class="chosen-container chosen-container-single" style="width: 157px;" title="" id="q8_chosen"><a class="chosen-single chosen-default"><span>Select an Option</span><div><b></b></div></a><div class="chosen-drop"><div class="chosen-search"><input type="text" autocomplete="off"></div><ul class="chosen-results"></ul></div></div>
 
     <h3><strong>Question 9</strong></h3>
-    <h4>You think that everyone’s views should be respected regardless of whether they are supported by facts or not.</h4>
+    <h4>You consider yourself one of the types that enjoy long walks on the beach.</h4>
     <select class="chosen-select" id="q9" style="display: none;">
       <option value=""></option>
       <option value="1">1 (Strongly Disagree)</option>
@@ -117,7 +137,7 @@
     </select><div class="chosen-container chosen-container-single" style="width: 157px;" title="" id="q9_chosen"><a class="chosen-single chosen-default"><span>Select an Option</span><div><b></b></div></a><div class="chosen-drop"><div class="chosen-search"><input type="text" autocomplete="off"></div><ul class="chosen-results"></ul></div></div>
 
     <h3><strong>Question 10</strong></h3>
-    <h4>You feel more energetic after spending time with a group of people.</h4>
+    <h4>Family is extremely important to you.</h4>
     <select class="chosen-select" id="q10" style="display: none;">
       <option value=""></option>
       <option value="1">1 (Strongly Disagree)</option>
@@ -142,3 +162,6 @@
     </footer>
 
   </div>
+
+</body>
+</html>
