select bars added

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -25,116 +25,117 @@
 
     <hr>
 
-    <select>
-      <option value="volvo">Volvo</option>
-      <option value="saab">Saab</option>
-      <option value="opel">Opel</option>
-      <option value="audi">Audi</option>
+    <select class="form-control form-control-sm" style="width: 157px;" id="q1">
+      <option value=""></option>
+      <option value="1">1 (Strongly Disagree)</option>
+      <option value="2">2</option>
+      <option value="3">3</option>
+      <option value="4">4</option>
+      <option value="5">5 (Strongly Agree)</option>
     </select>
 
     <h3><strong>Question 1</strong></h3>
     <h4>You exercise everyday.</h4>
-    <select class="chosen-select" id="q1" style="display: none;">
+    <select class="form-control form-control-sm" style="width: 157px;" id="q1">
       <option value=""></option>
       <option value="1">1 (Strongly Disagree)</option>
       <option value="2">2</option>
       <option value="3">3</option>
       <option value="4">4</option>
       <option value="5">5 (Strongly Agree)</option>
-    </select><div class="chosen-container chosen-container-single" style="width: 157px;" title="" id="q1_chosen"><a class="chosen-single chosen-default"><span>Select an Option</span><div><b></b></div></a><div class="chosen-drop"><div class="chosen-search"><input type="text" autocomplete="off"></div><ul class="chosen-results"></ul></div></div>
+    </select>
 
     <h3><strong>Question 2</strong></h3>
     <h4>You watch what you eat daily or at least try to.</h4>
-    <select class="chosen-select" id="q2" style="display: none;">
+    <select class="form-control form-control-sm" style="width: 157px;" id="q2">
       <option value=""></option>
       <option value="1">1 (Strongly Disagree)</option>
       <option value="2">2</option>
       <option value="3">3</option>
       <option value="4">4</option>
       <option value="5">5 (Strongly Agree)</option>
-    </select><div class="chosen-container chosen-container-single" style="width: 157px;" title="" id="q2_chosen"><a class="chosen-single chosen-default"><span>Select an Option</span><div><b></b></div></a><div class="chosen-drop"><div class="chosen-search"><input type="text" autocomplete="off"></div><ul class="chosen-results"></ul></div></div>
+    </select>
 
 
     <h3><strong>Question 3</strong></h3>
     <h4>Your idle Friday night is staying in cuddled up with a good movie.</h4>
-    <select class="chosen-select" id="q3" style="display: none;">
+    <select class="form-control form-control-sm" style="width: 157px;" id="q3">
       <option value=""></option>
       <option value="1">1 (Strongly Disagree)</option>
       <option value="2">2</option>
       <option value="3">3</option>
       <option value="4">4</option>
       <option value="5">5 (Strongly Agree)</option>
-    </select><div class="chosen-container chosen-container-single" style="width: 157px;" title="" id="q3_chosen"><a class="chosen-single chosen-default"><span>Select an Option</span><div><b></b></div></a><div class="chosen-drop"><div class="chosen-search"><input type="text" autocomplete="off"></div><ul class="chosen-results"></ul></div></div>
+    </select>
 
 
     <h3><strong>Question 4</strong></h3>
     <h4>You enjoy keeping up to date with recent sports news.</h4>
-    <select class="chosen-select" id="q4" style="display: none;">
+    <select class="form-control form-control-sm" style="width: 157px;" id="q4">
       <option value=""></option>
       <option value="1">1 (Strongly Disagree)</option>
       <option value="2">2</option>
       <option value="3">3</option>
       <option value="4">4</option>
       <option value="5">5 (Strongly Agree)</option>
-    </select><div class="chosen-container chosen-container-single" style="width: 157px;" title="" id="q4_chosen"><a class="chosen-single chosen-default"><span>Select an Option</span><div><b></b></div></a><div class="chosen-drop"><div class="chosen-search"><input type="text" autocomplete="off"></div><ul class="chosen-results"></ul></div></div>
+    </select>
 
 
     <h3><strong>Question 5</strong></h3>
-    <h4>People consider you a fun person to be around.</h4>
-    <select class="chosen-select" id="q5" style="display: none;">
+    <select class="form-control form-control-sm" style="width: 157px;" id="q5">
       <option value=""></option>
       <option value="1">1 (Strongly Disagree)</option>
       <option value="2">2</option>
       <option value="3">3</option>
       <option value="4">4</option>
       <option value="5">5 (Strongly Agree)</option>
-    </select><div class="chosen-container chosen-container-single" style="width: 157px;" title="" id="q5_chosen"><a class="chosen-single chosen-default"><span>Select an Option</span><div><b></b></div></a><div class="chosen-drop"><div class="chosen-search"><input type="text" autocomplete="off"></div><ul class="chosen-results"></ul></div></div>
+    </select>
 
 
     <h3><strong>Question 6</strong></h3>
     <h4>It is easy for someone to ruin your entire day.</h4>
-    <select class="chosen-select" id="q6" style="display: none;">
+    <select class="form-control form-control-sm" style="width: 157px;" id="q6">
       <option value=""></option>
       <option value="1">1 (Strongly Disagree)</option>
       <option value="2">2</option>
       <option value="3">3</option>
       <option value="4">4</option>
       <option value="5">5 (Strongly Agree)</option>
-    </select><div class="chosen-container chosen-container-single" style="width: 157px;" title="" id="q6_chosen"><a class="chosen-single chosen-default"><span>Select an Option</span><div><b></b></div></a><div class="chosen-drop"><div class="chosen-search"><input type="text" autocomplete="off"></div><ul class="chosen-results"></ul></div></div>
+    </select>
 
 
     <h3><strong>Question 7</strong></h3>
     <h4>You tend to tell people what they want to hear even if it is true or not.</h4>
-    <select class="chosen-select" id="q7" style="display: none;">
+    <select class="form-control form-control-sm" style="width: 157px;" id="q7">
       <option value=""></option>
       <option value="1">1 (Strongly Disagree)</option>
       <option value="2">2</option>
       <option value="3">3</option>
       <option value="4">4</option>
       <option value="5">5 (Strongly Agree)</option>
-    </select><div class="chosen-container chosen-container-single" style="width: 157px;" title="" id="q7_chosen"><a class="chosen-single chosen-default"><span>Select an Option</span><div><b></b></div></a><div class="chosen-drop"><div class="chosen-search"><input type="text" autocomplete="off"></div><ul class="chosen-results"></ul></div></div>
+    </select>
 
     <h3><strong>Question 8</strong></h3>
     <h4>You spend most of your day staring at your phone.</h4>
-    <select class="chosen-select" id="q8" style="display: none;">
+    <select class="form-control form-control-sm" style="width: 157px;" id="q8">
       <option value=""></option>
       <option value="1">1 (Strongly Disagree)</option>
       <option value="2">2</option>
       <option value="3">3</option>
       <option value="4">4</option>
       <option value="5">5 (Strongly Agree)</option>
-    </select><div class="chosen-container chosen-container-single" style="width: 157px;" title="" id="q8_chosen"><a class="chosen-single chosen-default"><span>Select an Option</span><div><b></b></div></a><div class="chosen-drop"><div class="chosen-search"><input type="text" autocomplete="off"></div><ul class="chosen-results"></ul></div></div>
+    </select>
 
     <h3><strong>Question 9</strong></h3>
     <h4>You consider yourself one of the types that enjoy long walks on the beach.</h4>
-    <select class="chosen-select" id="q9" style="display: none;">
+    <select class="form-control form-control-sm" style="width: 157px;" id="q9">
       <option value=""></option>
       <option value="1">1 (Strongly Disagree)</option>
       <option value="2">2</option>
       <option value="3">3</option>
       <option value="4">4</option>
       <option value="5">5 (Strongly Agree)</option>
-    </select><div class="chosen-container chosen-container-single" style="width: 157px;" title="" id="q9_chosen"><a class="chosen-single chosen-default"><span>Select an Option</span><div><b></b></div></a><div class="chosen-drop"><div class="chosen-search"><input type="text" autocomplete="off"></div><ul class="chosen-results"></ul></div></div>
+    </select>
 
     <h3><strong>Question 10</strong></h3>
     <h4>Family is extremely important to you.</h4>
