--- a/app/public/home.html
+++ b/app/public/home.html
@@ -27,7 +27,7 @@
 
     <footer class="footer">
       <div class="container">
-        <p><a href="/api/friends">API Friends List</a> | <a href="/api/waitlist">GitHub Repo</a>
+        <p><a href="/api/friends">API Friends List</a> | <a href="https://github.com/gkarmo/FriendFinder">GitHub Repo</a>
       </div>
     </footer>
 
