modal not working/getting heroku ready

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -8,7 +8,7 @@
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-
+  <script src="https://code.jquery.com/jquery.js"></script>
 </head>
 
 <body>
@@ -198,6 +198,7 @@
   <script type="text/javascript">
 
     $("#submit").on("click", function (event) {
+      console.log("click");
 
       event.preventDefault();
 
@@ -242,6 +243,7 @@
         $.post(url + "/api/friends", newFriend, function (data) {
 
           $("#yourMatch").text(data.name);
+          console.log(data.name);
           $("#matchPic").attr("src", data.photo);
           $("#myModal").modal("toggle");
         });
